Styled the benefits section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,5 @@
 @import "blocks/promo/promo";
 @import "blocks/header/header";
 @import "blocks/button/button";
+@import "blocks/benefits/benefits";
+
