Added responsive to the two sections

--- a/src/sass/blocks/benefits/benefits.scss
+++ b/src/sass/blocks/benefits/benefits.scss
@@ -13,7 +13,7 @@
         margin-top: 75px;
     }
     &__item {
-        width: 280px;
+        max-width: 280px;
     }
     &__icon {
         display: block;
@@ -37,6 +37,25 @@
         color: red;
         &:hover {
             color: red;
+        }
+    }
+}
+
+@media (max-width: $md) {
+    .benefits {
+        padding: 50px 0 65px 0;
+        &__items {
+            margin: 0;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__item {
+            margin-top: 60px;
+            max-width: 400px;
+        }
+
+        &__subheader {
+            margin-top: 10px;
         }
     }
 }
