--- a/src/sass/blocks/header/header.scss
+++ b/src/sass/blocks/header/header.scss
@@ -37,3 +37,19 @@
         justify-content: flex-end;
     }
 }
+
+@media (max-width: $md) {
+    .header {
+        &__logo {
+            width: 150px;
+        }
+    }
+}
+
+@media (max-width: $sm) {
+    .header {
+        &__official {
+            display: none;
+        }
+    }
+}
