--- a/src/sass/blocks/promo/promo.scss
+++ b/src/sass/blocks/promo/promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background: url('../../../img/main.jpg') no-repeat center center / cover;   
+    background: url('../img/main.jpg') no-repeat center center / cover;   
     &__wrapper {
         display: flex;
         flex-direction: column;
