Worked with the consultation section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,9 @@
 
 @import "blocks/promo/promo";
 @import "blocks/header/header";
+@import "blocks/title/title";
 @import "blocks/button/button";
 @import "blocks/benefits/benefits";
+@import "blocks/consultation/consultation";
+@import "blocks/form/form";
 
