--- a/src/sass/blocks/button/button.scss
+++ b/src/sass/blocks/button/button.scss
@@ -9,9 +9,11 @@
     font-size: 12px;
     font-weight: 400;
     &_main {
-        margin-top: 65px;
         width: 300px;
         height: 50px;
         font-size: 16px;
+    }
+    &__promo {
+        margin-top: 65px;
     }
 }
