Started working  with the carousel section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,6 @@
 @import "blocks/benefits/benefits";
 @import "blocks/consultation/consultation";
 @import "blocks/form/form";
+@import "blocks/carousel/carousel";
+
 
