--- a/src/sass/blocks/carousel/carousel.scss
+++ b/src/sass/blocks/carousel/carousel.scss
@@ -1,7 +1,56 @@
  .carousel {
-   padding: 81px 0;
-   &__inner {
-      height: 750px;
-      margin: 0 auto;
-   }
- }
+    padding: 81px 0;
+    &__inner {
+        position: relative;
+        width: 750px;
+        margin: 0 auto;
+    }
+
+    .prev, .next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: -66px;
+        border: none;
+        z-index: 1;
+        background-color: transparent;
+        img {
+            width: 31px;
+            height: 50px;
+        }
+    }
+    .next {
+      right: -66px;
+      left: auto;
+    }
+    .tns-item {
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+    }
+    .tns-nav {
+      button {
+        border: none;
+        margin-left: 2px;
+        background-color: #C70101;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+      }
+      .tns-nav-active {
+        background-color: gray;
+      }
+    }
+}
+
+@media (max-width: $xl) {
+  .carousel {
+    &__inner {
+      width: 600px;
+    }
+    .prev, .next {
+      display: none;
+    }
+  }
+}
