Started working with the catalog section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,5 +20,8 @@
 @import "blocks/consultation/consultation";
 @import "blocks/form/form";
 @import "blocks/carousel/carousel";
+@import "blocks/catalog/catalog";
+@import "blocks/catalog-item/catalog-item";
+
 
 
