--- a/src/sass/blocks/button/button.scss
+++ b/src/sass/blocks/button/button.scss
@@ -8,12 +8,9 @@
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 400;
-    &_main {
-        width: 300px;
-        height: 50px;
-        font-size: 16px;
-    }
     &__promo {
         margin-top: 65px;
     }
+    @import "_main/main";
+    @import "_size_small/size_small";
 }
