Worked with tabs interactivity

--- a/src/sass/blocks/catalog/catalog.scss
+++ b/src/sass/blocks/catalog/catalog.scss
@@ -3,4 +3,5 @@
     @import "__tabs/_tabs";
     @import "__tab/_tab";
     @import "__content/_content";
+    @import "__catalog-item/_catalog-item";
 }
