--- a/src/sass/blocks/catalog/__content/__content.scss
+++ b/src/sass/blocks/catalog/__content/__content.scss
@@ -1,3 +1,9 @@
 &__content {
     margin-top: 60px;
+    display: none;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    &_active {
+        display: flex;
+    }
 }
