Added responsive to the catalog section

--- a/src/sass/blocks/catalog-item/catalog-item.scss
+++ b/src/sass/blocks/catalog-item/catalog-item.scss
@@ -110,3 +110,15 @@
         }
     }
 }
+
+@media (max-width: $lg) {
+    .catalog-item {
+        width: 380px;
+    }
+}
+
+@media (max-width: $sm) {
+    .catalog-item {
+        width: 300px;
+    }
+}
