--- a/src/sass/blocks/catalog/__tab/__tab.scss
+++ b/src/sass/blocks/catalog/__tab/__tab.scss
@@ -25,3 +25,17 @@
         color: white;
     }
 }
+
+@media (max-width: $md) {
+    &__tab {
+        width: 360px;
+        margin: 0;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: $sm) {
+    &__tab {
+        width: 250px;
+    }
+}
