Did a new section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,8 @@
 @import "blocks/carousel/carousel";
 @import "blocks/catalog/catalog";
 @import "blocks/catalog-item/catalog-item";
+@import "blocks/feedback/feedback";
+
 
 
 
