--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,8 @@
 @import "blocks/catalog/catalog";
 @import "blocks/catalog-item/catalog-item";
 @import "blocks/feedback/feedback";
+@import "blocks/footer/footer";
+
 
 
 
