--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/catalog-item/catalog-item";
 @import "blocks/feedback/feedback";
 @import "blocks/footer/footer";
+@import "blocks/modal/modal";
 
 
 
