--- a/src/sass/blocks/form/form.scss
+++ b/src/sass/blocks/form/form.scss
@@ -15,6 +15,13 @@
             margin-bottom: 20px; 
         }
     }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        margin-bottom: 15px;
+    }
 }
 
 
