--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/feedback/feedback";
 @import "blocks/footer/footer";
 @import "blocks/modal/modal";
+@import "blocks/pageup/pageup";
 
 
 
