Added an animation

--- a/src/sass/blocks/benefits/benefits.scss
+++ b/src/sass/blocks/benefits/benefits.scss
@@ -12,6 +12,12 @@
     &__icon {
         display: block;
         margin: 0 auto;
+        &_animated {    
+            animation: heartbeat 2s ease infinite;
+            &:hover {
+                animation-play-state: paused;
+            }
+        }
     }
     &__subheader {
         margin-top: 42px;
