--- a/src/sass/blocks/catalog-item/catalog-item.scss
+++ b/src/sass/blocks/catalog-item/catalog-item.scss
@@ -79,19 +79,22 @@
         transition: 0.5s all;
         padding-left: 19px;
         margin-bottom: 0;
-        list-style-type: square;
+        ul {
+            list-style-type: square;
+
+            li {
+                color: #555;
+                font-style: 14px;
+                font-weight: 300;
+                margin-bottom: 20px;
+                &::marker {
+                    color: $main_color;
+                }
+            }
+        }
         &_active {
             transform: translateX(-100%);
             margin-left: 0;
-        }
-        li {
-            color: #555;
-            font-style: 14px;
-            font-weight: 300;
-            margin-bottom: 20px;
-            &::marker {
-                color: $main_color;
-            }
         }
     }
     &__back {
