--- a/src/sass/blocks/footer/footer.scss
+++ b/src/sass/blocks/footer/footer.scss
@@ -47,6 +47,11 @@
             height: 27px;
         }
     }
+
+    iframe {
+        width: 100%;
+        height: 630px;
+    }
 }
 
 @media (max-width: $sm) {
@@ -55,6 +60,5 @@
             // width: auto;
             padding: 25px 39px 30px 39px;
         }
-
     }
 }
